--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,4 +1,45 @@
 
 .homepagePic {
-    width: 35rem;
+    width: 25rem;
+    border: 1px solid blue;
+    border-radius: 15px;
+}
+
+.homeContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.levelContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;    
+    gap: 3rem;
+}
+
+.levelCard {
+    font-weight: 700;
+    cursor: pointer;
+    width: 27rem;
+    height: 21rem;;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.99) 0px 1px 3px 0px, rgba(0, 0, 0, 0.99) 0px 1px 2px 0px;
+}
+
+.levelCard:hover {
+    border: 1px solid blue;
+    color: blue;
+}
+
+.levelCard:active {
+    border: 1px solid red;
+    translate: 0px 6px;
+    color:red
 }
