--- a/src/styles/waldoGame.css
+++ b/src/styles/waldoGame.css
@@ -10,3 +10,19 @@
     border: 4px solid #2563eb;
     border-radius: 10px;
 }
+
+.wrongGuess {
+    position: absolute;
+   
+    
+    font-size: 20px;
+    font-weight: 700;
+    background-color: white;
+    color: darkred;
+    border: 3px solid red;
+    border-radius: 15px;
+    width: 18rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
