--- a/src/styles/selectionMenu.css
+++ b/src/styles/selectionMenu.css
@@ -36,3 +36,20 @@
 .foundChar {
     background-color: red;
 }
+
+.wrongGuess {
+    position: absolute;
+   
+    
+    font-size: 20px;
+    font-weight: 700;
+    background-color: white;
+    color: darkred;
+    border: 3px solid red;
+    border-radius: 15px;
+    width: 18rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
