--- a/src/styles/selectionMenu.css
+++ b/src/styles/selectionMenu.css
@@ -39,8 +39,6 @@
 
 .wrongGuess {
     position: absolute;
-   
-    
     font-size: 20px;
     font-weight: 700;
     background-color: white;
@@ -53,3 +51,55 @@
     justify-content: center;
 }
 
+.scoreContainer {
+    width: 20rem;
+    border: 2px solid blue;
+    color: blue;
+    background-color: white;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 15px;
+}
+
+.a {
+    color: darkred;
+}
+
+.inputField {
+    text-align: center;
+    width: 10rem;
+    color: darkred;
+    border-radius: 15px;
+    font-weight: 600;
+    border: 2px solid blue;
+    font-size: 20px;
+    padding: 5px;
+}
+
+.submit {
+    background-color: white;
+    color: blue;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 9px;
+    border: none;
+    box-shadow: inset 2px 2px 5px darkred;
+    border: 1px solid blue
+}
+
+.submit:hover {
+    border: 1px solid darkred;
+    color: darkred;
+}
+
+.submit:active {
+    translate: 0px 3px;
+    
+}
