--- a/src/styles/selectionMenu.css
+++ b/src/styles/selectionMenu.css
@@ -51,6 +51,21 @@
     justify-content: center;
 }
 
+.rightGuess {
+    text-align: center;
+    position: absolute;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: white;
+    color: green;
+    border: 3px solid green;
+    border-radius: 15px;
+    width: 18rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .scoreContainer {
     width: 20rem;
     border: 2px solid blue;
@@ -90,7 +105,7 @@
     font-weight: 600;
     padding: 9px;
     border: none;
-    box-shadow: inset 2px 2px 5px darkred;
+    box-shadow: 2px 1px 2px darkred;
     border: 1px solid blue
 }
 
