--- a/src/styles/leaderboard.css
+++ b/src/styles/leaderboard.css
@@ -48,3 +48,18 @@
     translate: 0px 6px;
     border: 2px solid red;
 }
+
+.userList {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    width: 30rem;
+    border: 1px solid black;
+    font-size: 20px;
+    padding: 5px;
+    color: black;
+    font-weight: 600;
+    justify-content: space-between;
+    align-items: center;
+
+}
