--- a/src/styles/leaderboard.css
+++ b/src/styles/leaderboard.css
@@ -13,7 +13,15 @@
 }
 
 .levelBoardContainer {
+    font-size: 22px;
+    font-weight: 700;
     color: red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap:10px;
 }
 
 .levelSelect {
@@ -49,11 +57,22 @@
     border: 2px solid red;
 }
 
-.userList {
+.number {
+    font-size: 24px;
+    width: 3rem;
+    padding-left: 1rem;
+}
+
+.trophy {
+    width: 3rem;
+}
+
+.first, .second, .third, .users {
     list-style: none;
     display: flex;
     flex-direction: row;
     width: 30rem;
+    height: 5rem;
     border: 1px solid black;
     font-size: 20px;
     padding: 5px;
@@ -61,5 +80,16 @@
     font-weight: 600;
     justify-content: space-between;
     align-items: center;
+}
 
+.first {
+    outline: 2px solid gold;
+}
+
+.second {
+    outline: 2px solid silver;
+}
+
+.third {
+    outline: 2px solid #CD7F32;
 }
