--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,16 @@ h2 {
   flex-direction: column;
   gap: 10px;
 }
+
+.footer {
+  background-color: white;
+  position: fixed;
+  bottom: 0;
+  font-weight: 700;
+  text-align: center;
+  color: red;
+  width: 100%;
+  height: 1.4rem;
+  padding: 2px;
+  border-top: 1px solid blue;
+}
