--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ h2 {
   color: red;
   width: 100%;
   height: 1.4rem;
-  padding: 2px;
+  padding: 1px;
+  padding-bottom: 1px;
   border-top: 1px solid blue;
 }
