--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,20 +1,68 @@
 
 .header {
     width: 100%;
-    height: 6rem;
-    border: 2px solid blue;
+    height: 5rem;
+    border-bottom: 2px solid blue;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     gap: 15px;
+    box-shadow: rgba(200, 0, 0, 0.99) 2px 1px 3px 0px, rgba(200, 0, 0, 0.99) 2px 1px 2px 0px;   
+
+}
+
+.redText {
+    color: red;
+    text-shadow: 1px black;
+}
+
+.titleText {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px
 }
 
 .linkButton {
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 700;
+    color: blue;
     border: 1px solid black;
-    color: black;
     background-color: #f7f7f7;
     padding: 10px;
-    border-radius: 10px;
-    
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.99) 0px 1px 3px 0px, rgba(0, 0, 0, 0.99) 0px 1px 2px 0px;   
+}
+
+.linkButton:hover {
+    border: 1px solid blue;
+    background-color: #e5e5e5;
+}
+
+.linkButton:active{
+    border: 1px solid red;
+    translate: 0px 6px;
+    color:red
+}
+
+.timerBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 700;
+    border-radius: 15px;
+    width: 5rem;
+    height: 3rem;
+    border: 2px solid blue;
+    outline: 3px solid red;
+    box-shadow: rgba(0, 0, 0, 0.99) 0px 1px 3px 0px, rgba(0, 0, 0, 0.99) 0px 1px 2px 0px;   
+}
+
+.timerBoxNull {
+    width: 5rem;
+    height: 3rem;
 }
