--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -6,20 +6,62 @@
 }
 
 .homeContainer {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    font-size: 20px;
+    padding:5px;
+}
+
+.gameTextContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    font-size: 20px;
+    justify-content: space-around;
+    gap:10px;
+}
+
+.directions{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    flex-wrap: wrap;
+    padding: 10px;
+    color:blue;
+}
+
+.red, .waldo, .wizard {
+    color: red;
+}
+
+.directions p {
+    text-align: center;
+    font-weight: 700;
+}
+
+.characterList {
+    font-weight: 700;
+    color: blue;
+    padding: 20px;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
 }
 
 .levelContainer {
+    margin-left: 5rem;
     display: grid;
     grid-template-columns: 1fr 1fr;    
-    gap: 3rem;
+    gap: 1rem;
+    padding: 10px;
 }
 
 .levelCard {
+    color:blue;
+    font-size: 22px;
     font-weight: 700;
     cursor: pointer;
     width: 27rem;
@@ -34,12 +76,18 @@
 }
 
 .levelCard:hover {
+    background-color: rgba(0, 0, 400, 0.1);
     border: 1px solid blue;
-    color: blue;
 }
 
 .levelCard:active {
+    background-color: rgba(400, 0, 0, 0.1);
     border: 1px solid red;
     translate: 0px 6px;
     color:red
+}
+
+.linkCard {
+    text-decoration: none;
+    width: 27rem;
 }
