--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,4 +1,12 @@
 
+@media only screen and (max-width: 768px) {
+    .header {
+        background-color: green;
+    }
+}
+
+
+
 .header {
     width: 100%;
     height: 5rem;
