--- a/src/styles/selectionMenu.css
+++ b/src/styles/selectionMenu.css
@@ -35,10 +35,14 @@
 
 .foundChar {
     background-color: red;
+    border-radius: 10px;
+    padding:2px;
 }
 
 .wrongGuess {
-    position: absolute;
+    position: fixed;
+    top: 6rem;
+    left: 40%;
     font-size: 20px;
     font-weight: 700;
     background-color: white;
@@ -53,7 +57,9 @@
 
 .rightGuess {
     text-align: center;
-    position: absolute;
+    position: fixed;
+    top: 6rem;
+    left: 40%;
     font-size: 20px;
     font-weight: 700;
     background-color: white;
@@ -98,6 +104,7 @@
 }
 
 .submit {
+    text-decoration: none;
     background-color: white;
     color: blue;
     border-radius: 15px;
