--- a/src/styles/selectionMenu.css
+++ b/src/styles/selectionMenu.css
@@ -4,6 +4,8 @@
 }
 
 .selectionCircle{
+    width: 100px;
+    height: 100px;
     border: 5px dashed red;
     border-radius: 15px;
     color: blue;
@@ -124,4 +126,17 @@
 .submit:active {
     translate: 0px 3px;
     
+}
+
+@media only screen and (max-width: 768px) {
+
+    /* .selectionCircle {
+        width: 50px;
+        height: 50px;
+    } */
+
+    .selectionMenu {
+        font-size: 13px;
+    }
+
 }
